Fix mobile overflow issue

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -84,6 +84,8 @@ a{
 
 // layout and style
 .hero{
+    overflow:hidden;
+    position: relative;
     margin:0;
     padding:0;
     color:white;
